--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-carrousel": "^1.0.5",
+    "vue-material": "^1.0.0-beta-11",
+    "vue-resource": "^1.5.1",
+    "vue-scroll-reveal": "^1.0.11",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
