--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue-carrousel": "^1.0.5",
     "vue-material": "^1.0.0-beta-11",
     "vue-resource": "^1.5.1",
+    "vue-router": "^3.1.5",
     "vue-scroll-reveal": "^1.0.11",
     "vuex": "^3.1.2"
   },
