--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
-    "vue-carrousel": "^1.0.5",
+    "vue-carousel": "^0.18.0",
     "vue-material": "^1.0.0-beta-11",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.5",
