--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.5",
     "vue-scroll-reveal": "^1.0.11",
+    "vuelidate": "^0.7.5",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
